# checkthisout

./: Cargo.toml  README.md  docker-compose.yaml
frontend/: .gitignore  Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/database/: filtered_ranks.rs  postcode.rs  prelude.rs  profiles.rs  sea_orm_active_enums.rs
server/src/rest/: app_state.rs  get_craftsmen.rs  patch_craftsmen.rs
server/src/traits/: mod.rs  simple_disctance.rs
server/src/utils/: mod.rs  postcode_utils.rs  profile.rs  ranking.rs  scoring.rs
src/: main.rs
src/database/: mod.rs  postcode.rs  prelude.rs  profiles.rs
src/rest/: mod.rs
src/utils/: postcode_utils.rs
