[package]
name = "checkthisout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = [
    "with-chrono",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
